# scrap-sports

./: .env.sample  Makefile  README.md  main.py  pyproject.toml
app/: settings.py
app/db/: postgres_db.py
app/scraper/: scraper.py  scraper_adidas.py  scraper_nike.py
