[tool.poetry]
name = "scrap-sports"
version = "0.1.0"
description = "Scrap Sports"
authors = ["guimassoqueto <gui.massoqueto@gmail.com>"]
readme = "README.md"
packages = [{include = "app/**/*.py"}]

[tool.poetry.dependencies]
python = "^3.10"
fake-useragent = "^1.4.0"
aiohttp = "^3.8.5"
python-dotenv = "^1.0.0"
psycopg = "^3.1.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
